adjust layout issue and make img responsive

--- a/style.css
+++ b/style.css
@@ -69,8 +69,9 @@ nav ul {
 
 .logo {
   font-family: 'Pangolin', cursive;
-  font-size: 72px;
+  font-size: 45px;
   color: #fff;
+  text-align: center;
 }
 
 header nav ul li {
@@ -109,7 +110,7 @@ form button {
   border: none;
   color: #fff;
   font-size: 24px;
-  padding: 15px;
+  padding: 15px 25px;
   width: 100%;
 }
 
@@ -163,8 +164,20 @@ footer p {
 
 /* -------  Media Query ------- */
 
+@media all and (min-width: 480px) and (max-width: 630px) {
+  header .logo {
+    font-size: 40px;
+  }
+}
+
 @media all and (min-width: 480px) {
   /* -------  Navigation ------- */
+  .logo {
+    font-family: 'Pangolin', cursive;
+    font-size: 72px;
+    color: #fff;
+  }
+
   header {
     display: flex;
     justify-content: space-between;
@@ -172,25 +185,11 @@ footer p {
     padding: 0 20px 0 20px;
   }
 
-  .label-and-form {
-    display: block;
-    width: 15%;
-  }
-
-  #stay form {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-
-  #stay button {
-    width: 15%;
-  }
-
   /* About section */
 
   #about img {
-    width: 45%;
+    width: 47%;
+    margin: 0;
   }
 
   #about > div {
@@ -221,8 +220,7 @@ footer p {
   }
 
   #ideas img {
-    width: 90%;
-    height: 100%;
+    width: 95%;
   }
   /* Host section */
 
@@ -233,5 +231,29 @@ footer p {
 
   #host img {
     width: 45%;
+  }
+}
+
+@media all and (min-width: 630px) {
+  .label-and-form {
+    display: flex;
+    flex-direction: column;
+    width: 15%;
+  }
+
+  #stay form {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  form input {
+    width: 100%;
+  }
+
+  #stay button {
+    width: 15%;
+    font-size: 16px;
+    padding: 10px 20px;
   }
 }
